--- a/minetest.conf
+++ b/minetest.conf
@@ -2,7 +2,7 @@
 mg_flags = caves, notrees
 
 #physics
-  #disable fast (since its used to pick up drops)
+#disable fast (since its used to pick up drops)
 #movement_acceleration_fast = 2
 #movement_speed_fast = 4
 
@@ -25,3 +25,10 @@ skyblock.world_bottom_node  = default:water_source
 
 #added
 disable_anticheat = true
+
+#performance
+max_block_send_distance = 6
+max_simultaneous_block_sends_per_client = 1
+max_simultaneous_block_sends_server_total = 20
+active_block_range = 1
+server_map_save_interval = 15.3
