--- a/minetest.announce.conf
+++ b/minetest.announce.conf
@@ -3,7 +3,7 @@
 mg_flags = caves, notrees
 
 #physics
-  #disable fast (since its used to pick up drops)
+#disable fast (since its used to pick up drops)
 #movement_acceleration_fast = 2
 #movement_speed_fast = 4
 
@@ -26,3 +26,14 @@ skyblock.world_bottom_node  = default:water_source
 
 #added
 disable_anticheat = true
+
+#performance
+max_block_send_distance = 6
+max_simultaneous_block_sends_per_client = 1
+max_simultaneous_block_sends_server_total = 20
+active_block_range = 1
+server_map_save_interval = 15.3
+server_announce = true
+server_name = LinusHSAO's UNOFFICE Skyislands Server
+server_description = A Huge Chatroom & Swimming Pool?
+server_url = https://www.facebook.com/notes/595280720555170/ABOUT%20MinetestSERVER/1085241874892383/
